--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ header{
     text-align: center;
     margin-top: 80px;
     margin-bottom: 80px;
-    color: rgb(0, 177, 0);
+    color: rgba(13, 161, 13, 0.877);
 }
 
 header > h1 {
@@ -16,4 +16,38 @@ header > h1 {
 header > h3 {
     font-size: 2rem;
     margin-top: 10px;
+}
+
+input {
+    width: 5.5rem;
+    height: 5rem;
+    font-size: 4rem;
+}
+
+.numeros {
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+.sorteio, .verificacao{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.btnsort{
+    padding: 5px 20px;
+    font-size: 2em;
+    margin-top: 20px;
+    background-color: rgb(74, 172, 18);
+    color: white;
+}
+
+p{
+    font-size: 2em;
+    color: rgb(90, 90, 90);
 }
